# koda-vm

./: BytecodeSpecs.md  CMakeLists.txt  LICENSE  README.md  bytecode.bin.bak
src/: main.cpp
src/vm/: interpreter.hpp  shared.hpp  specs.hpp  utils.hpp
src/vm/instructions/: shared.hpp  shared_internal.hpp
src/vm/instructions/impl/: alu.hpp  base.hpp  ext.hpp
src/vm/instructions/map/: instruction_map.hpp
src/vm/memory/: memory.hpp  registers.hpp
